# sqlmap-websocket-proxy

./: .gitignore  LICENSE  README.md  pyproject.toml
src/sqlmap_websocket_proxy/: __init__.py  console.py  handler.py  main.py
